# Threads_bot

./: .env.example  .gitignore  API_EXAMPLES.md  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_GUIDE.md  LICENSE  PROMPTS.md  QUICKSTART.md  README.md  SYSTEM_FLOW.md  alembic.ini  debug_compose.py  debug_selectors.py  docker-compose.yml  hash_password.py  plan.md  pyproject.toml  requirements.txt  run.py  setup.bat  setup.sh  test_browser.py  work.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_threads_oauth_fields.py  003_social_actions.py  004_account_publisher_type.py  005_worker_required_models.py
app/: __init__.py  auth.py  config.py  crypto.py  database.py  main.py
app/api/: __init__.py  accounts.py  content.py  dashboard.py  pages.py  workers.py
app/llm/: __init__.py  base.py  ollama.py  openai_compatible.py
app/models/: __init__.py  account.py  content.py  log.py  social_action.py  worker.py
app/publishers/: __init__.py  base.py  browser_publisher.py  mock.py  threads_api.py  vision_agent.py
app/scheduler/: __init__.py  tasks.py
app/schemas/: __init__.py  account.py  content.py  response.py  worker.py
app/services/: __init__.py  content_planner.py  notifier.py  post_generator.py  post_publisher.py  social_actions.py
app/static/: app.js  style.css
scripts/: create_example_account.py  test_llm.py  worker_agent.py
tests/: __init__.py  test_llm.py  test_publisher.py  test_scheduler.py
worker_app/: build_exe.py  config.py  gui.py  main.py  ollama_manager.py  requirements.txt  threads_worker.spec  worker_client.py
(+6 files in other folders)
